# serve-files

./: Cargo.toml  GEMINI.md
.agent/rules/: rules.md
benches/: metadata.rs  openat.rs
examples/: serve_dir.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: detect_compression_support.rs
src/: body.rs  dir.rs  etag.rs  file.rs  lib.rs  platform.rs  range.rs  served_dir.rs  serving.rs
