[package]
name = "serve-files"
version = "0.5.0-dev"
authors = ["Greg Steffensen <greg.steffensen@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "helpers for conditional GET, HEAD, byte range serving, and gzip content encoding for static files and more with hyper and tokio"
keywords = ["http", "file", "range"]
categories = ["web-programming::http-server"]
repository = "https://github.com/StupendousYappi/serve-files"
edition = "2021"
rust-version = "1.88"

[features]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.0"
fixed-cache = { version = "0.1.7", features = ["rapidhash"] }
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
http = "1.4"
http-body = "1.0"
httpdate = "1.0"
memchr = "2.7"
pin-project-lite = "0.2"
rapidhash = "4.2"
sync_wrapper = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "errhandlingapi",
    "std",
    "winbase",
    "winerror",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
htmlescape = "0.3"
http-body-util = "0.1.0"
httparse = "1.3.4"
hyper = { version = "1.0.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
mime_guess = "2.0"
nix = { version = "0.29", default-features = false, features = ["dir", "fs"] }
once_cell = "1.3"
rand = "0.8"
reqwest = { version = "0.12.7", default-features = false, features = ["gzip"] }
socket2 = { version = "0.5.0" }
tempfile = "3.1.0"
tokio = { version = "1.39.0", features = ["macros", "sync"] }
mime = "0.3"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "file"
harness = false

[[bench]]
name = "inmem"
harness = false

[[example]]
name = "serve_dir"
